--- a/tsconfig.json
+++ b/tsconfig.json
@@ -113,5 +113,5 @@
     "jsx": "react-jsx" /* Skip type checking all .d.ts files. */,
     "typeRoots": ["./node_modules/@types", "./types"]
   },
-  "include": ["src"]
+  "include": ["src", "custom.d.ts"]
 }
